--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Hello World!</title>
 </head>
 <body>
-
+<style>
+    h1{
+        color: red;
+    }
+    </style>
 <h1>Hello worlasdf!</h1>
 <p>asdflakjshdfajsdfkasdf</p>
 
