--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
     </style>
 <h1>Hello worlasdf!</h1>
-<p>asdflakjshdfajsdfkasdf</p>
 
+<a href="week-1/seven-principles.html"> SEVEN PRINCIPLES</a>
 </body>
-</html>
+</html
